Store cleanup (ui removed), fixed one-click-action chan menu on mobile

--- a/src/assets/sass/menu-layer.scss
+++ b/src/assets/sass/menu-layer.scss
@@ -142,7 +142,7 @@
 .menu-layer.open
 {
   background-color:$menupanebgcolor;
-  max-width:260px;
+  max-width:250px;
   min-width:190px;
   margin-left:0;
   .menu-layer-section-wrapper
@@ -186,7 +186,7 @@
     {
       width:90vw;
       //margin-left:-100%;
-      max-width:260px;
+      max-width:250px;
       bottom:0;
       overflow-x: hidden;
       overflow-y: auto;
@@ -197,7 +197,7 @@
     {
       .menu-layer-inner
       {
-        max-width:260px;
+        max-width:250px;
         min-width:190px;
         margin-left:0;
       }
@@ -209,7 +209,7 @@
 {
   .always-deployed-on-desktop
   {
-    max-width:260px;
+    max-width:250px;
     min-width:190px;
     width:90vw;
     margin-left:0;
@@ -229,7 +229,7 @@
   }
   .always-deployed-on-desktop
   {
-    max-width:260px;
+    max-width:250px;
     min-width:190px;
     width:90vw;
     margin-left:0;
